fix: add a constants for contrast colors in js

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -33,7 +33,7 @@ body {
   background-position: center;
   background-size: cover;*/
   background-color: white;
-  opacity: 0.3;
+  opacity: 0.1;
   z-index: 5;
 }
 
@@ -47,7 +47,7 @@ h1 {
 
 h2 {
   margin-bottom: 0.5rem;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 @media (max-width: 700px) {
